test/golden/Hello {piCL{width}}.15463239215289408179.golden

INITIALPATH:7:33: error:
    • Variable not found: width
    • In the quasi-quotation: [fmt|Hello {pi:{width}}|]
  |
7 | main = putStrLn [fmt|Hello {pi:{width}}|]
  |                                 ^^^^^
